# opendds-smart-lock

./: .gitattributes  .gitignore  README.md  smart-lock  smart-lock-conf.sh.template  smart-lock.inc
.github/workflows/: build_and_test.yml  container_images.yml
android/Idl/: .gitignore  SmartLock_Idl_Java.mpc
android/SmartLock/: .gitignore  build.gradle  general_config.xml.template
certs/: gov.xml  governance.xml.p7s
certs/id_ca/: 01.pem  02.pem  03.pem  gen_new_rsa_cert.sh  identity_ca.csr  identity_ca_private_key.pem  index.txt  index.txt.old
certs/lock1/: house1.xml  house1_signed.p7s  identity_key.pem  lock1.csr  lock1_cert.pem  private_key.pem
certs/lock2/: house1.xml  house1_signed.p7s  identity.pem  lock2.csr  lock2_cert.pem  permissions.xml.p7s  private_key.pem
certs/perm_ca/: permissions_ca.csr  permissions_ca_private_key.pem  sign_doc.sh
certs/relay/: cert_relay.csr  cert_relay.pem  cert_relay_key.pem  governance_signed.p7s  identity_ca_cert.pem  permissions_ca_cert.pem  relay.p7s  relay.xml
certs/tablet/: house1.xml  house1_signed.p7s  private_key.pem  tablet.csr  tablet_cert.pem
deploy/: README.md  relay-deploy.sh  rtps.ini  smartlock.service
deploy/certs/: identity.pem  identity_ca.pem  identity_key.pem  permissions.xml.p7s
dockerfiles/android-opendds-cross/: Dockerfile  README.md  android-compile  clone-smartlock  entrypoint.sh
dockerfiles/pi-opendds-cross/: .gitignore  Dockerfile  README.md  (+1 more)
flutter/: .gitignore  README.md
flutter/smartlock_idl_plugin/src/: CMakeLists.txt  smartlock_idl_plugin.cpp  smartlock_idl_plugin.h
ios/: .gitignore  build.sh
meta-smartlock/: README
shutil/: pi-compile
src/: .gitignore  SmartLock.cpp  SmartLock.mpc  pigpio.mpb  rtps.ini  rtps.ini.template  smartlock.ini  smartlock.sh  wiring_pi.mpb
src/certs_downloader/: Cargo.toml
src/certs_downloader/src/: lib.rs  main.rs
(+132 files in other folders)
