[package]
name = "certs_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
